--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  json_annotation: ^1.0.0
+
+dev_dependencies:
+  build_runner: ^0.10.0
+  json_serializable: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
