--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,4 +41,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "com.google.code.gson:gson:2.8.5"
 }
