--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   json_annotation: ^1.0.0
+  permission_handler: ^2.0.0
 
 dev_dependencies:
   flutter_test:
